# rasters

./: Bounding Box Transformation.ipynb  GEDI_11SLT.jpeg.aux.xml  Open Raster at Multi-Point.ipynb  Open Raster at Point.ipynb  README.md  debug_reading_netcdf.py  makefile  pyproject.toml
.github/workflows/: ci.yml
examples/: Opening a GeoTIFF.ipynb
notebooks/: GEDI_11SLT.tif  GeoSeries to MultiGeometry.ipynb  Multi-Polygons from Raster Geometry.ipynb  Multi-raster.ipynb  Open Raster at Multi-Point.ipynb  Open Raster at Point.ipynb  Reprojection.ipynb
rasters/: CRS.py  __init__.py  bbox.py  bias_correct.py  center_aeqd.py  clip.py  constants.py  coordinate_array.py  kdtree.py  linear_downscale.py  local_UTM_proj4.py  local_UTM_proj4_from_lat_lon.py  mosaic.py  multi_point.py  multi_polygon.py  multi_raster.py  out_of_bounds_error.py  point.py  polygon.py  raster.py  raster_geolocation.py  raster_geometry.py  raster_grid.py  rasters.py  spatial_geometry.py  transform_xy.py  vector_geometry.py  version.py  where.py  wrap_geometry.py
tests/: test_import_dependencies.py  test_import_rasters.py  test_input.tif  test_local_UTM_proj4.py  test_open_geotiff.py  test_raster_geometry_local_UTM_proj4.py  test_subsetting.py  test_transform_xy.py
