[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasters"
version = "1.7.1"
description = "raster processing toolkit"
readme = "README.md"
authors = [
    { name = "Gregory Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pillow",
    "geopandas",
    "h5py",
    "matplotlib",
    "msgpack",
    "msgpack_numpy",
    "numpy",
    "pyproj",
    "rasterio",
    "shapely",
    "scikit-image",
    "affine",
    "astropy",
    "pykdtree>=1.3.11",
    "pyresample",
    "pytest",
    "scipy",
    "six",
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "jupyter",
    "pytest>=6.0",
    "pytest-cov",
    "twine"
]

[tool.setuptools.package-data]
rasters = ["*.txt"]

[project.urls]
"Homepage" = "https://github.com/python-rasters/rasters"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The 'shapely.geos' module is deprecated:DeprecationWarning:geopandas._compat",
]
