[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasters"
version = "1.16.0"
description = "raster processing toolkit"
readme = "README.md"
authors = [
    { name = "Gregory Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "affine",
    "astropy",
    "ECOv002-calval-tables",
    "geopandas",
    "h5py",
    "matplotlib",
    "msgpack",
    "msgpack_numpy",
    "numpy",
    "pandas",
    "pillow",
    "pykdtree>=1.3.11",
    "pyproj",
    "pyresample",
    "pytest",
    "rasterio",
    "scikit-image",
    "scipy",
    "shapely",
    "six",
]

requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "jupyter",
    "pytest>=6.0",
    "pytest-cov",
    "twine"
]

[tool.setuptools.packages.find]
exclude = ["notebooks*", "examples*"]

[project.urls]
"Homepage" = "https://github.com/python-rasters/rasters"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:The 'shapely.geos' module is deprecated:DeprecationWarning:geopandas._compat",
]
